--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="textcontrast status"></div>
     </div>
     <footer class="textcontrast">
-        by Riva Farabi 2016
+        by <a href="http://github.com/rfbabeher">Riva Farabi</a>
         <br> Color wheel by <a href="http://jweir.github.io/colorwheel/">John Weir</a>
     </footer>
     <script src="js/index.js"></script>
