--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="RGB, LED, IoT, AgnosThings">
     <meta name="author" content="Riva Farabi">
     <meta name="dicoding:email" content="rivafarabi_babeheer@yahoo.com">
-    <title>RGB LED Guru by Riva Farabi</title>
+    <title>RGB LED Guru</title>
     <link rel="icon" href="img/logo.png">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300,900' rel='stylesheet' type='text/css'>
