--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div class="textcontrast status"></div>
     </div>
     <footer class="textcontrast">
-        by <a href="http://github.com/rfbabeheer">Riva Farabi</a>
-        <br> Color wheel by <a href="http://jweir.github.io/colorwheel/">John Weir</a>
+        by <a class="textcontrast" href="http://github.com/rfbabeheer">Riva Farabi</a>
+        <br> Color wheel by <a class="textcontrast" href="http://jweir.github.io/colorwheel/">John Weir</a>
     </footer>
     <script src="js/index.js"></script>
 </body>
